fixed tf job template

--- a/.github/workflows/terraform-staging-plan.yml
+++ b/.github/workflows/terraform-staging-plan.yml
@@ -1,7 +1,7 @@
 name: Terraform Staging Plan
 on:
   pull_request:
-    paths:
+    paths-ignore:
       - '!deploy/**' # Do not run this action when nothing in deploy is changed
 
 jobs:
