--- a/.github/workflows/validate-terraform.yml
+++ b/.github/workflows/validate-terraform.yml
@@ -1,7 +1,7 @@
 name: Validate Terraform Template
 on:
   pull_request:
-    paths:
+    paths-ignore:
       - '!deploy/**' # Do not run this action when nothing in deploy is changed
 
 jobs:
