test api pipeline

--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -11,4 +11,5 @@ jobs:
     services:
       image: docker:19.03.5-dind
     steps:
-      - run: echo "This job runs on Pull Request creation"
+      - run: apk add --no-cache docker-compose
+      - run: docker-compose -f docker-compose.test.yml run --rm api rspec
