uses actions/checkout to access project folder

--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -11,5 +11,6 @@ jobs:
     services:
       image: docker:19.03.5-dind
     steps:
+      - uses: actions/checkout@v2
       - run: apk add --no-cache docker-compose
       - run: docker-compose -f docker-compose.test.yml run --rm api rspec
