--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -13,4 +13,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: apk add --no-cache docker-compose
-      - run: docker-compose -f docker-compose.test.yml run --rm api rspec
+      - run: docker-compose -f docker-compose.test.yml run --rm api bundle exec rspec
