--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -16,10 +16,14 @@ jobs:
       image: docker:19.03.5-dind
     steps:
       - uses: actions/checkout@v2
-      - run: apk add python3
-      - run: pip3 install awscli
-      - run: docker build --compress -t $ECR_REPO:$CI_COMMIT_SHORT_SHA .
-      - run: $(aws ecr get-login --no-include-email --region ap-southeast-1)
-      - run: docker push $ECR_REPO:$CI_COMMIT_SHORT_SHA
-      - run: docker tag $ECR_REPO:$CI_COMMIT_SHORT_SHA $ECR_REPO:latest
-      - run: docker push $ECR_REPO:latest
+      - env:
+          ECR_REPO: ${{ secrets.ECR_REPO }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+        - apk add python3
+        - pip3 install awscli
+        - docker build --compress -t $ECR_REPO:$IMAGE_TAG .
+        - $(aws ecr get-login --no-include-email --region ap-southeast-1)
+        - docker push $ECR_REPO:$IMAGE_TAG
+        - docker tag $ECR_REPO:$IMAGE_TAG $ECR_REPO:latest
+        - docker push $ECR_REPO:latest
