added terraform production apply. changed terraform prod plan to run on merge request into production

--- a/.github/workflows/terraform-production-plan.yml
+++ b/.github/workflows/terraform-production-plan.yml
@@ -1,11 +1,10 @@
 name: Terraform production plan
 on:
-  push:
+  pull_request:
     branches:
       - production
-    paths-ignore:
-      - 'client/**'
-      - '.github/**'
+    paths:
+      - 'deploy/**' # Do not run this action when nothing in deploy is changed
 
 jobs:
   terraform-production-plan:
