--- a/.github/workflows/terraform-production-apply.yml
+++ b/.github/workflows/terraform-production-apply.yml
@@ -1,22 +1,21 @@
-name: Terraform Staging Apply
+name: Terraform Production Apply
 on:
   push:
     branches:
-      - master
       - production
     paths-ignore:
       - 'client/**'
       - '.github/**'
 
 jobs:
-  terraform-staging-plan:
+  terraform-production-plan:
     runs-on: ubuntu-latest
     container: hashicorp/terraform:0.14.3
     steps:
       - run: echo "This job runs on code merged on master and production"
-  terraform-staging-apply:
+  terraform-production-apply:
     runs-on: ubuntu-latest
-    needs: [terraform-staging-plan]
+    needs: [terraform-production-plan]
     container: hashicorp/terraform:0.14.3
     steps:
       - run: echo "This job runs on code merged on master and production"
