--- a/.github/workflows/terraform-staging-plan.yml
+++ b/.github/workflows/terraform-staging-plan.yml
@@ -17,7 +17,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-southeast-1
 
-      - name: Terraform Staging Apply
+      - name: Terraform Staging Plan
         env:
           ECR_REPO: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: ${{ github.sha }}
