--- a/.github/workflows/terraform-staging-apply.yml
+++ b/.github/workflows/terraform-staging-apply.yml
@@ -13,10 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     container: hashicorp/terraform:0.14.3
     steps:
-      - run: echo "This job runs on code merged on master and production"
-  terraform-staging-apply:
-    runs-on: ubuntu-latest
-    needs: [terraform-staging-plan]
-    container: hashicorp/terraform:0.14.3
-    steps:
-      - run: echo "This job runs on code merged on master and production"
+      - uses: actions/checkout@v2
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+
+      - name: Terraform Staging Plan
+        env:
+          ECR_REPO: ${{ secrets.ECR_REPO }}
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          cd deploy/
+          export TF_VAR_ecr_image_api=$ECR_REPO:$IMAGE_TAG
+          terraform init
+          terraform workspace select staging
+          terraform apply -auto-approve
