--- a/.github/workflows/terraform-staging-apply.yml
+++ b/.github/workflows/terraform-staging-apply.yml
@@ -12,6 +12,7 @@ jobs:
   terraform-staging-apply:
     runs-on: ubuntu-latest
     container: hashicorp/terraform:0.14.3
+    environment: staging
     steps:
       - uses: actions/checkout@v2
       - name: Configure AWS credentials
