--- a/.github/workflows/terraform-staging-apply.yml
+++ b/.github/workflows/terraform-staging-apply.yml
@@ -26,17 +26,12 @@ jobs:
         env:
           ECR_REPO: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: ${{ github.sha }}
-          DB_USERNAME: ${{ secrets.staging.TF_VAR_db_username }}
-          DB_PASSWORD: ${{ secrets.staging.TF_VAR_db_password }}
-          RAILS_MASTER_KEY: ${{ secrets.staging.TF_VAR_rails_master_key }}
+          TF_VAR_db_username: ${{ secrets.staging.TF_VAR_db_username }}
+          TF_VAR_db_password: ${{ secrets.staging.TF_VAR_db_password }}
+          TF_VAR_rails_master_key: ${{ secrets.staging.TF_VAR_rails_master_key }}
         run: |
           cd deploy/
           export TF_VAR_ecr_image_api=$ECR_REPO:$IMAGE_TAG
-          export TF_VAR_db_username=$DB_USERNAME
-          export TF_VAR_db_password=$DB_PASSWORD
-          export TF_VAR_rails_master_key=$RAILS_MASTER_KEY
-          echo $TF_VAR_rails_master_key
-          echo $TF_VAR_db_password
           terraform init
           terraform workspace select staging
           terraform apply -auto-approve
