--- a/.github/workflows/terraform-staging-apply.yml
+++ b/.github/workflows/terraform-staging-apply.yml
@@ -26,9 +26,9 @@ jobs:
         env:
           ECR_REPO: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: ${{ github.sha }}
-          TF_VAR_db_username: ${{ secrets.staging.TF_VAR_db_username }}
-          TF_VAR_db_password: ${{ secrets.staging.TF_VAR_db_password }}
-          TF_VAR_rails_master_key: ${{ secrets.staging.TF_VAR_rails_master_key }}
+          TF_VAR_db_username: ${{ secrets.TF_VAR_db_username }}
+          TF_VAR_db_password: ${{ secrets.TF_VAR_db_password }}
+          TF_VAR_rails_master_key: ${{ secrets.TF_VAR_rails_master_key }}
         run: |
           cd deploy/
           export TF_VAR_ecr_image_api=$ECR_REPO:$IMAGE_TAG
