--- a/.github/workflows/terraform-staging-apply.yml
+++ b/.github/workflows/terraform-staging-apply.yml
@@ -23,6 +23,7 @@ jobs:
           aws-region: ap-southeast-1
 
       - name: Terraform Staging Apply
+        id: test_output
         env:
           ECR_REPO: ${{ secrets.ECR_REPO }}
           IMAGE_TAG: ${{ github.sha }}
@@ -35,3 +36,6 @@ jobs:
           terraform init
           terraform workspace select staging
           terraform apply -auto-approve
+          echo $(terraform output bastion_host)
+        - name: Echo test
+          run: echo ${{ steps.test_output }}
